--- a/Esercizio/assets/css/style.css
+++ b/Esercizio/assets/css/style.css
@@ -1,5 +1,7 @@
 /* Your styles here */
 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&family=Open+Sans&display=swap');
+
 html, body {
     margin:0;
     padding:0;
@@ -7,12 +9,31 @@ html, body {
 
 }
 
+body{
+    color:#393d41;
+    font-size: 1.2rem;
+    font-family: 'Open Sans', sans-serif;
+    line-height: 1.65;
+}
+
+h1, h3 {
+    color: #25a2c3 ;
+    font-size: 1.2rem;
+    font-family:Montserrat, sans-serif;
+    font-weight: bold;
+    line-height: 1.5; 
+}
+
+
 /*header*/
+
+
 #header {
    
     background-color: black;
     text-align: center;
-    height: 15vh;
+    /*height: 15vh; */
+    padding:20px;
     margin:0px;
 }
 
@@ -21,9 +42,15 @@ html, body {
     width:150px;
     padding:30px;
 }
+#logo{
+    line-height: 0.5;
+}
 
 /* main*/
-
+ main{
+    margin:-17px;
+    padding:20px;
+ }
 
 
 /* primaSezione*/
@@ -32,11 +59,18 @@ html, body {
     background-image: url(../images/banner.jpg);
     background-size:100vw;
     text-align: center;
-    margin-block-start:0px;
+    margin:-17px;
+    padding:15%;
 }
  
 button {
     background-color: #f04c2f;
+    font-family: Montserrat, bold;
+    font-weight: bold;
+    color:white;
+    padding:15px 40px;
+    border-radius: 10%;
+    border: none;
 }
 
 /*secondaSezione*/
@@ -46,11 +80,18 @@ button {
     text-align: center;
 }
 
+#immagineTonda{
+    border-radius: 50%;
+}
+
 /* recensioni */
 
 #recensioni {
     background-color: #e22d0e;
     text-align: center;
+    color:white;
+    margin:auto;
+    padding:5%;
 }
 
 /* terza sezione */
@@ -58,6 +99,16 @@ button {
 #terzaSezione {
     background-color: white;
     text-align: center;
+    width:90vw;
+    margin:0 auto;
+}
+#terzaSezione div img{
+    width:100%;
+}
+#terzaSezione div{
+    border:1px solid #dee1e3;
+    margin:25px;
+    
 }
 
 /* footer */
@@ -65,10 +116,28 @@ button {
 footer {
     text-align: center;
     background-color: #25a2c3;
-    color: white;
+    color: #c8e7f0;
+    margin:0;
+    padding: 10%;
 }
-
+ h2 {color:white;
+    font-weight:bold;
+}
 hr {
-    margin-left: 40%;
-    margin-right: 40%;
+    margin-left: 30%;
+    margin-right: 30%;
 }
+ address a{
+    color:#c8e7f0;
+ }
+ address{
+    font-style: normal;
+ }
+
+ p{
+    padding:10px;
+    text-align: center;
+ }
+
+
+ 
